<resources>
    <string name="app_name">NihonGO</string>
    <string name="imgNihongo">NihonGO! icon</string>
    <string name="app_title">NihonGO!</string>
    <string name="mission">Your journey to learning Japanese starts here.</string>
    <string name="imgLoadIcon"></string>
    <string name="imgLoadIcon2"></string>
    <string name="imgLoadIcon3"></string>
    <string name="imgLoginIcon"></string>
    <string name="login">LOGIN to NihonGO!</string>
    <string name="usernameInput">Enter Username: </string>
    <string name="passwordInput">Enter Password: </string>
    <string name="linkForgotPw">Forgot Password?</string>
    <string name="btnLogin">LOGIN</string>
    <string name="txtNewUser">New to NihonGO!?</string>
    <string name="linkSignUp"><u>Create an Account</u></string>
    <string name="signup">SIGN UP to NihonGO!</string>
    <string name="emailInput">Enter Email: </string>
    <string name="birthdateInput">Enter Birth Date: </string>
    <string name="courseSpinnerHint">Choose Course: </string>
    <string name="usernameInputSU">Enter Username: </string>
    <string name="passwordInputSU">Enter Password: </string>
    <string name="btnCreateAcc">CREATE ACCOUNT</string>
    <string name="linkLogin"><u>Already have an account?</u></string>
    <string name="txtEditPw">Forgot Password?</string>
    <string name="txtEmailLink">Enter your account\'s email address and we will send you a password reset link.</string>
    <string name="emailInputFP">Enter Email: </string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnBack">Back</string>
    <string name="title_activity_bhome">bHome</string>
    <string name="menu_home">Home</string>
    <string name="menu_kana_chart">Kana Chart</string>
    <string name="menu_profile">User Profile</string>
    <string name="menu_b_home">Beginner Home</string>
    <string name="menu_t_home">Traveler Home</string>
    <string name="title_activity_thome">tHome</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_b_lessons">Beginner Lessons</string>
    <string name="menu_b_exercises">Beginner Exercises</string>
    <string name="menu_b_videos">Beginner Videos</string>
    <string name="menu_t_lessons">Traveler Lessons</string>
    <string name="menu_t_exercises">Traveler Exercises</string>
    <string name="menu_t_videos">Traveler Videos</string>
    <string name="txtBCourse"><b>Beginner</b> Course</string>
    <string name="btnBLessons">LESSONS</string>
    <string name="btnBExercises">EXERCISES</string>
    <string name="btnBVideos">VIDEOS</string>
    <string name="txtTCourse"><b>Traveler</b> Course</string>
    <string name="btnTLessons">LESSONS</string>
    <string name="btnTExercises">EXERCISES</string>
    <string name="btnTVideos">VIDEOS</string>
    <string name="imgUserPfp">User Profile Picture</string>
    <string name="txtUsername"><![CDATA[<b>Username:</b> ]]></string>
    <string name="txtEmail"><![CDATA[<b>Email:</b> ]]></string>
    <string name="txtBirthdate"><![CDATA[<b>Birth Date:</b> ]]></string>
    <string name="txtCourse"><![CDATA[<b>Selected Course:</b> ]]></string>
    <string name="btnLogout">LOGOUT</string>
    <string name="txtRefresh">Refresh page by clicking on the home icon below!</string>
    <string name="txtKanaDesc1">There are three types of letters in Japanese.</string>
    <string name="txtKanaDesc2"><![CDATA[1. <b>Hiragana</b> (phonetic sounds) are basically used for particles, words, and parts of words.]]></string>
    <string name="txtKanaDesc3"><![CDATA[2. <b>Katakana</b> (phonetic sounds) are basically used for foreign/ loan words.]]></string>
    <string name="txtKanaDesc4"><![CDATA[3. <b>Kanji</b> (Chinese characters) are used for the stem of words and convey the meaning as well as sound.]]></string>
    <string name="txtKanaDesc5">Below are Hiragana and Katakana chart for your reference !</string>
    <string name="imgKanaIntro">Intro of Kana</string>
    <string name="imgHiraganaChart">Hiragana Chart</string>
    <string name="imgKatakanaChart">Katakana Chart</string>
    <string name="txtBLessons">Beginner Lessons</string>
    <string name="txtBLesson1"><b>Lesson 1 - \n Numbers pt.1（数字）</b></string>
    <string name="txtBLessonDesc1">In this lesson, you will get to learn the numbers 1–10 in Japanese.</string>
    <string name="txtBLesson2"><b>Lesson 2 - \n Family Members pt.1（家族）</b></string>
    <string name="txtBLessonDesc2">In this lesson, you will learn the basic family members terms.</string>
    <string name="txtBExercises">Beginner Exercises</string>
    <string name="txtBExercise1"><b>Exercise 1 - \n Numbers pt.1（数字）</b></string>
    <string name="txtBExerciseDesc1">In this exercise, you will practice what you have learnt in lesson 1.</string>
    <string name="txtBExercise2"><b>Exercise 2 - \n Family Members pt.1（家族）</b></string>
    <string name="txtBExerciseDesc2">In this exercise, you will recall the family members terms you have learnt in lesson 2.</string>
    <string name="txtBVideos">Beginner Videos</string>
    <string name="txtBVideo1"><b>Introduction to Particles（助詞）</b></string>
    <string name="txtBVideoDesc1">In this video, you will get to know the common particles used in Japanese.</string>
    <string name="txtBVideo2"><b>I am/ I am not/ ...（は／です／ですか／…）</b></string>
    <string name="txtBVideoDesc2">In this video, you will learn basic grammar in Japanese.</string>
    <string name="menu_lesson_ready">Lesson Ready</string>
    <string name="txtLessonReady">Are you ready to learn?</string>
    <string name="btnNotReady">NO!</string>
    <string name="btnReady">YES!</string>
    <string name="menu_b_lesson1">Beginner Lesson 1</string>
    <string name="menu_b_lesson2">Beginner Lesson 2</string>
    <string name="btnClose">Close</string>
    <string name="txtBLesson1Pg1"><b>One [1]</b>\n 一（いち）ichi\t</string>
    <string name="txtBLesson1Pg1Ex"><b>Example:</b>\n 一年生（いちねんせい）ichinensei\n = First Year Student</string>
    <string name="imgNumOne">Number One</string>
    <string name="imgOneStudent">One Student</string>
    <string name="btnForward">Forward</string>
    <string name="menu_b_lesson1_pg2">Beginner Lesson 1 Pg2</string>
    <string name="txtBLesson1Pg2"><b>Two [2]</b>\n 二（に）ni\t</string>
    <string name="txtBLesson1Pg2Ex"><b>Example:</b>\n 二時（にじ）niji\n = Two o\' Clock</string>
    <string name="imgNumTwo">Number Two</string>
    <string name="imgTwoOClock">Two o\' Clock</string>
    <string name="menu_b_lesson1_pg3">Beginner Lesson 1 Pg3</string>
    <string name="txtBLesson1Pg3"><b>Three [3]</b>\n 三（さん）san\t</string>
    <string name="txtBLesson1Pg3Ex"><b>Example:</b>\n 三人（さんにん）sannin\n = Three Person</string>
    <string name="imgNumThree">Number Three</string>
    <string name="imgThreePerson">Three Person</string>
    <string name="menu_b_lesson1_pg4">Beginner Lesson 1 Pg4</string>
    <string name="txtBLesson1Pg4"><b>Four [4]</b>\n 四（し／よん）shi/ yon\t</string>
    <string name="txtBLesson1Pg4Ex"><b>Example:</b>\n 四月（しがつ）shigatsu\n = April</string>
    <string name="imgNumFour">Number Four</string>
    <string name="imgApril">April</string>
    <string name="menu_b_lesson1_pg5">Beginner Lesson 1 Pg5</string>
    <string name="txtBLesson1Pg5"><b>Five [5]</b>\n 五（ご）go\t</string>
    <string name="txtBLesson1Pg5Ex"><b>Example:</b>\n 五円（ごえん）goen\n = Five Yen</string>
    <string name="imgNumFive">Number Five</string>
    <string name="imgFiveYen">Five Yen</string>
    <string name="menu_b_lesson1_end">End of Beginner Lesson 1</string>
    <string name="txtBLesson1End"><b>You have completed \nlesson 1!!</b>\n\n Click below to continue to</string>
    <string name="linkToExercise1">\n<u>Exercise 1</u>\n</string>
    <string name="txtBLesson2Pg1"><b>Father</b>\n お父さん（おとうさん）otousan\t</string>
    <string name="txtBLesson2Pg1Ex"><b>Example:</b>\n お父さん（おとうさん）、こんにちは!\n Otousan, konnichiwa!\n = Hello, Dad!</string>
    <string name="imgFather">Father</string>
    <string name="menu_b_lesson2_pg2">Beginner Lesson 2 Pg2</string>
    <string name="txtBLesson2Pg2"><b>Mother</b>\n お母さん （おかあさん）okaasan\t</string>
    <string name="txtBLesson2Pg2Ex"><b>Example:</b>\n お母さん （おかあさん）、おはよう!\n Okaasan, ohayou!\n = Good morning, Mom!</string>
    <string name="imgMother">Mother</string>
    <string name="menu_b_lesson2_pg3">Beginner Lesson 2 Pg3</string>
    <string name="txtBLesson2Pg3"><b>Big brother</b>\n お兄さん （おにいさん）oniisan\t</string>
    <string name="txtBLesson2Pg3Ex"><b>Example:</b>\n お兄さん （おにいさん）、ありがとう!\n Oniisan, arigatou!\n = Thanks, big brother!</string>
    <string name="imgBigBrother">Big Brother</string>
    <string name="menu_b_lesson2_pg4">Beginner Lesson 2 Pg4</string>
    <string name="txtBLesson2Pg4"><b>Big sister:</b>\n お姉さん　（おねえさん）oneesan\t</string>
    <string name="txtBLesson2Pg4Ex"><b>Example:</b>\n お姉さん　（おねえさん）、おやすみなさい!\n Oneesan, oyasuminasai!\n = Good night, big sister!</string>
    <string name="imgBigSister">Big Sister</string>
    <string name="menu_b_lesson2_pg5">Beginner Lesson 2 Pg5</string>
    <string name="txtBLesson2Pg5"><b>Little brother</b>\n 弟 （おとうと）otouto\t</string>
    <string name="txtBLesson2Pg5Ex"><b>Example:</b>\n 弟（おとうと）はゲームが好きです\n Otouto wa geemu ga suki desu.\n = My younger brother likes games.</string>
    <string name="imgLittleBrother">Little Brother</string>
    <string name="menu_b_lesson2_pg6">Beginner Lesson 2 Pg6</string>
    <string name="txtBLesson2Pg6"><b>Little sister</b>\n 妹 （いもうと） imouto\t</string>
    <string name="txtBLesson2Pg6Ex"><b>Example:</b>\n 妹（いもうと）はかわいいです!\n Imouto wa kawaii desu!\n = My little sister is cute!</string>
    <string name="imgLittleSister">Little Sister</string>
    <string name="menu_b_lesson2_end">End of Beginner Lesson 2</string>
    <string name="txtBLesson2End"><b>You have completed \nlesson 2!!</b>\n\n Click below to continue to</string>
    <string name="linkToExercise2">\n<u>Exercise 2</u>\n</string>
    <string name="menu_b_exercise1">Beginner Exercise 1</string>
    <string name="txtBExercise1Pg1"><b>Beginner Exercise 1</b></string>
    <string name="btnSubmit">Submit Answers</string>
    <string name="txtResult"></string>
    <string name="menu_score">Score</string>
    <string name="txtScore">Keep it up !</string>
    <string name="txtFinalScore"></string>
    <string name="menu_b_exercise2">Beginner Exercise 2</string>
    <string name="txtBExercise2Pg1">Beginner Exercise 2</string>
    <string name="txtTVideos">Traveler Videos</string>
    <string name="txtTVideo1"><b>Asking Train Directions</b></string>
    <string name="txtTVideoDesc1">In this video, you will see an real life example of how to ask train directions using Japanese.</string>
    <string name="txtTVideo2"><b>At a Convenience Store</b></string>
    <string name="txtTVideoDesc2">In this video, you will get to experience a convenience store situation in Japan.</string>
    <string name="menu_t_lesson1_pg1">Traveler Lesson 1 Pg1</string>
    <string name="txtTLesson1Pg1"><b>Hello</b>\n こんにちは Konnichiwa\t</string>
    <string name="txtTLesson1Pg1Ex"><b>Example:</b>\n こんにちは！元気ですか？\n (Konnichiwa! Genki desu ka?)\n = Hello! How are you?</string>
    <string name="imgHello">Hello</string>
    <string name="menu_t_lesson1_pg2">Traveler Lesson 1 Pg2</string>
    <string name="txtTLesson1Pg2"><b>Good Morning</b>\n おはようございます Ohayou gozaimasu\t</string>
    <string name="txtTLesson1Pg2Ex"><b>Example:</b>\n おはようございます。今日はいい天気ですね。\n (Ohayou gozaimasu. Kyou wa ii tenki desu ne.)\n = Good morning. The weather is nice today, isn’t it?</string>
    <string name="imgGoodmorning">Hello</string>
    <string name="menu_t_lesson1_pg3">Traveler Lesson 1 Pg3</string>
    <string name="txtTLesson1Pg3"><b>Thank you(very much)</b>\n ありがとうございます Arigatou gozaimasu\t</string>
    <string name="txtTExercise2Pg1">Traveler Exercise 2</string>
</resources>