<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nihongo.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="courseType"
            app:argType="string" />
        <action
            android:id="@+id/action_home_to_Bhome"
            app:destination="@id/Bhome" />
        <action
            android:id="@+id/action_home_to_Thome"
            app:destination="@id/Thome" />
    </fragment>

    <fragment
        android:id="@+id/Bhome"
        android:name="com.example.nihongo.ui.BHome.BHomeFragment"
        android:label="@string/menu_b_home"
        tools:layout="@layout/fragment_b_home" />

    <fragment
        android:id="@+id/Thome"
        android:name="com.example.nihongo.ui.THome.THomeFragment"
        android:label="@string/menu_t_home"
        tools:layout="@layout/fragment_t_home" />

    <fragment
        android:id="@+id/nav_kana_chart"
        android:name="com.example.nihongo.ui.KanaChart.KanaChartFragment"
        android:label="@string/menu_kana_chart"
        tools:layout="@layout/fragment_kana_chart" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.nihongo.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/BLessonsFragment"
        android:name="com.example.nihongo.ui.BHome.BLessonsFragment"
        android:label="@string/menu_b_lessons"/>

    <fragment
        android:id="@+id/BExercisesFragment"
        android:name="com.example.nihongo.ui.BHome.BExercisesFragment"
        android:label="@string/menu_b_exercises"/>

    <fragment
        android:id="@+id/BVideosFragment"
        android:name="com.example.nihongo.ui.BHome.BVideosFragment"
        android:label="@string/menu_b_videos"/>

    <fragment
        android:id="@+id/TLessonsFragment"
        android:name="com.example.nihongo.ui.THome.TLessonsFragment"
        android:label="@string/menu_t_lessons"/>

    <fragment
        android:id="@+id/TExercisesFragment"
        android:name="com.example.nihongo.ui.THome.TExercisesFragment"
        android:label="@string/menu_t_exercises"/>

    <fragment
        android:id="@+id/TVideosFragment"
        android:name="com.example.nihongo.ui.THome.TVideosFragment"
        android:label="@string/menu_t_videos"/>

    <fragment
        android:id="@+id/LessonReadyFragment"
        android:name="com.example.nihongo.ui.LessonReadyFragment">
        <argument
            android:name="lessonFragment"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

    <fragment
        android:id="@+id/BLesson1Fragment"
        android:name="com.example.nihongo.ui.BHome.BLesson1.BLesson1"
        android:label="@string/menu_b_lesson1"/>

    <fragment
        android:id="@+id/BLesson2Fragment"
        android:name="com.example.nihongo.ui.BHome.BLesson2"
        android:label="@string/menu_b_lesson2"/>

</navigation>