<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.THome.TExercise2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/btnClose"
            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/txtTExercise2Pg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTExercise2Pg1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>